testdata/baselines/reference/submodule/compiler/staticVisibility2.errors.txt
staticVisibility2.ts(2,12): error TS7008: Member 'sideLength' implicitly has an 'any' type.


==== staticVisibility2.ts (1 errors) ====
    class Square {
        static sideLength;
               ~~~~~~~~~~
!!! error TS7008: Member 'sideLength' implicitly has an 'any' type.
        constructor(sideLength: number) {
            this.sideLength = sideLength;
        }
    }